# Image_resizer_PP_Lab2

./: CMakeLists.txt
include/: benchmark.hpp  cli.hpp  config.hpp  image.hpp  io.hpp  resize.hpp  scaling_attacks.hpp  timing.hpp  util.hpp  validate.hpp
src/: benchmark.cpp  cli.cpp  io.cpp  main.cpp  resize_openmp.cpp  resize_sequential.cpp  scaling_attacks.cpp  util.cpp  validate.cpp
